# atcoder

./: .gitignore  .gitmodules  README.md  mise.toml  pyproject.toml
ABC272/d/: main.py
Performance/: .nvim.lua  generate.py
Performance/ABC380/: ]
Performance/ABC382/: a.out
Performance/ABC387/: ]  test.py
Performance/ABC388/: contest.acc.json  i.py  input.txt  rt.py
Performance/ABC389/: contest.acc.json
Performance/ABC390/: contest.acc.json
Performance/ABC391/: contest.acc.json
Performance/ABC392/: contest.acc.json
Performance/ABC393/: test.py
Performance/ABC394/: contest.acc.json
Performance/ABC395/: contest.acc.json
Performance/ABC396/: contest.acc.json
Performance/ABC398/: contest.acc.json
Performance/ABC399/: contest.acc.json  input.py  input.txt  test.py
Performance/ABC400/: ]  contest.acc.json
Performance/ABC404/: contest.acc.json
Performance/ABC405/: contest.acc.json
Performance/ABC406/: contest.acc.json
Performance/ABC407/: contest.acc.json
Performance/ABC408/: contest.acc.json
Performance/ABC409/: contest.acc.json
Performance/ABC410/: test.py
Performance/ABC411/: contest.acc.json  gutyoku.py  test.py  test.txt
Performance/ABC412/: contest.acc.json
Performance/AHC039/: a.out
Performance/AHC040/: .gitignore  a.out  main.cpp  main.py
Performance/ARC187/: sample.txt  test.py
Performance/ARC195/: contest.acc.json  input.py  (+3 more)
Training/: #generate.py#  generate.py  tessokugenerate.py
adt_all_20250612_3/: contest.acc.json
lang_update/: pypy.toml  taplo.toml
virtual_contest/: create_issue.py  selection.py
(+1043 files in other folders)
