[project]
name = "my_atcoder_code"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "ac-library-python",
  "debugpy>=1.8.14",
  "online-judge-tools>=11.5.1",
  "sortedcontainers>=2.4.0",
]

[tool.uv.sources]
ac-library-python = { git = "https://github.com/not522/ac-library-python" }


[tool.ruff]
line-length = 88
select = ["C9", "E", "F", "W", "I"]

[tool.ruff.lint]
ignore = ["F401", "E402", "F811", "E741", "E702"]
